<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/title"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/selector_back" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setpwd"
            android:textColor="@color/textcolor"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_forget_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/hintphone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_forget_ident_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/identifying_code"
                android:maxLength="6"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_forget_get_code"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/selector_get_code"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_forget_pwd1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/hintpwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/hintpwdagain"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5" >
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/title"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_forget_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/textcolor"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>