<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/oil_icon" />

        <TextView
            android:id="@+id/tv_pay_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stationName"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_pay_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_linearlayout"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/money_style"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_money"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_pop_right"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_linearlayout"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pay_style"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/pay_icon_alipay"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defult_type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_pay_type"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_pop_right"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_linearlayout"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/notice"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_notice"
            android:button="@null"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/frame_linearlayout"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bill_info"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etBillInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvPayMoney"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="bottom|center"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvAddOil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>